experience-jump-stop-build-border

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,7 @@ html, body {
   overflow-x:hidden 
 } 
 .vertical-timeline-element-content {
-  border-radius: 2px solid red;
-  box-shadow: inset 2px 1px  5px  #00cea8, 0px 3px  5px  #bf61ff,1px 3px  10px  #00cea8
+  box-shadow: inset 1px 1px  6px  #00cea8, 2px 2px  6px  #bf61ff,0px 0px  8px  #00cea8,0px 0px  8px  #bf61ff
               
 }
 
